{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 18,
  "lineage": "76b37ad0-7730-14d7-c9c3-ef1629a6d1e1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e31863b8e1f70a5",
            "arn": "arn:aws:ec2:us-east-1:339713150088:instance/i-085c7febe1e6a98d6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085c7febe1e6a98d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "codio-deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c35a5353b78ce857",
            "private_dns": "ip-10-0-1-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.251",
            "public_dns": "ec2-54-163-56-163.compute-1.amazonaws.com",
            "public_ip": "54.163.56.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b296a61f701374a8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00ff9058f8558482d",
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f9a1250aef1dfbb4"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.database",
            "aws_security_group.wordpress",
            "aws_subnet.main",
            "aws_subnet.second",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.template_file.wordpress_user_data",
            "module.database.module.db_instance.aws_cloudwatch_log_group.this",
            "module.database.module.db_instance.aws_db_instance.this",
            "module.database.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.database.module.db_instance.random_id.snapshot_identifier",
            "module.database.module.db_option_group.aws_db_option_group.this",
            "module.database.module.db_parameter_group.aws_db_parameter_group.this",
            "module.database.module.db_subnet_group.aws_db_subnet_group.this",
            "module.database.random_password.master_password"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713150088:internet-gateway/igw-06ffb0129b276b789",
            "id": "igw-06ffb0129b276b789",
            "owner_id": "339713150088",
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "vpc_id": "vpc-0932f1160597d2784"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "crt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713150088:route-table/rtb-071c0a520f0d6efec",
            "id": "rtb-071c0a520f0d6efec",
            "owner_id": "339713150088",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06ffb0129b276b789",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0932f1160597d2784"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05f818de2e4f0a4b7",
            "route_table_id": "rtb-071c0a520f0d6efec",
            "subnet_id": "subnet-00ff9058f8558482d"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.crt",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0511e1bbc18ba1544",
            "route_table_id": "rtb-071c0a520f0d6efec",
            "subnet_id": "subnet-05b564f6fe170d0e5"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.crt",
            "aws_subnet.second",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713150088:security-group/sg-0014cb2dfd9d269e7",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0014cb2dfd9d269e7",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "Mysql from VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow database connection",
            "name_prefix": "",
            "owner_id": "339713150088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0932f1160597d2784"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.main",
            "aws_subnet.second",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wordpress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713150088:security-group/sg-0f9a1250aef1dfbb4",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f9a1250aef1dfbb4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Everywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from Everywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow instance connection",
            "name_prefix": "",
            "owner_id": "339713150088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0932f1160597d2784"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713150088:subnet/subnet-00ff9058f8558482d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ff9058f8558482d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713150088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "vpc_id": "vpc-0932f1160597d2784"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "second",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713150088:subnet/subnet-05b564f6fe170d0e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05b564f6fe170d0e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "339713150088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            },
            "vpc_id": "vpc-0932f1160597d2784"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:339713150088:vpc/vpc-0932f1160597d2784",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-066d7bdf1872fe17a",
            "default_route_table_id": "rtb-091ac82f60c46acef",
            "default_security_group_id": "sg-08f4a8dd71cb8f95a",
            "dhcp_options_id": "dopt-07b78f2c8101cce24",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0932f1160597d2784",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-091ac82f60c46acef",
            "owner_id": "339713150088",
            "tags": {
              "Name": "Codio Terraform Demo"
            },
            "tags_all": {
              "Name": "Codio Terraform Demo"
            }
          }
        }
      ]
    }
  ]
}